2022-11-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/Makefile.in: add missing $(exeext)
	* support/cpp/gcc/gcc.cc,
	  support/cpp/gcc/opts.cc,
	  support/cpp/gcc/opts-common.cc,
	  support/cpp/gcc/prefix.cc,
	  support/cpp/gcc/toplev.cc,
	  support/cpp/libcpp/lex.cc,
	  support/cpp/libcpp/mkdeps.cc,
	  support/cpp/gcc/c-family/c-opts.cc,
	  support/cpp/gcc/c-family/c-ppoutput.cc: move iostream header
	  last to avoid inconsistent struct offsets and thus segfaults

2022-11-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClabel.c (labelGotoGoto, labelUnreach),
	  src/SDCCBBlock.c (iCodeFromeBBlock),
	  src/SDCCicode.h: fix bug #3501

2022-11-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.lex: process #line directive in __asm__ blocks

2022-11-14 Benedikt Freisen <b.freisen AT gmx.net>

	* src/pic16/pcodepeep.c:
	  Fix type mismatches, one of them critical. See [bugs:#3179].

2022-11-11 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/config.gcc:
	  Workaround: Ignore "unsupported target"
	  ... as suggested by Free-PDK in bug #3517.

2022-11-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue related to bug #3471.

2022-11-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph.def:
	  Fix iy handling in peephole optimizer, variant of patch #441 by Job Bolle.
	* src/stm8/peeph.def,
	  support/regression/tests/modulong.c,
	  support/regression/ports/stm8/spec.mk:
	  clr-push stm8 peephole optimizer rule, variant of patch #443 by Basil Hussain.

2022-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* support/cpp/gcc/config/riscv/arch-canonicalize:
	  Add missing file from GCC CPP.

2022-10-25 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Fix argument type in dummy, #3492.

2022-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx: